Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-19366

Unable to use fonts which have different styles available in Qt

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.8.0
    • 4.7.0, 4.7.1, 4.7.2, 4.7.3
    • GUI: Font handling
    • None
    • Mac OS X 10.6
    • ae9cc6c29521f1b597c3120f638d125892cdd593, 1481955dd93acea1c5cf684e3f753d80f614e9bf

      Current access to fonts is by family name and weight/style, which means you can only access bold/italic variants.
      For font families that have a greater range of styles (extended, condensed and so on), they simply can't be used.

      Example:
      QFont font("Skia Regular Black Condensed"); <-- returns Helvetica

        1. font-style-test.zip
          3 kB
          James Larcombe
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jiang Jiang Jiang
            tasilvol Taito Silvola (Inactive)
            Votes:
            4 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes